--- a/src/scripts/css/cet/cet.qstprod.css
+++ b/src/scripts/css/cet/cet.qstprod.css
@@ -1,3 +1,4 @@
+div.row { margin-left: 0px !important; margin-right: 0px !important; }
 .cet-formgroup-container { background-color: rgb(250, 250, 250); border: 1px solid lightgrey; border-radius: 4px; padding: 16px; margin-bottom: 20px; }
 .cet-accordion { background-color: rgb(250, 250, 250); border: 1px solid lightgrey; border-radius: 4px; margin-bottom: 20px; }
 .cet-formgroup-inner-container { background-color: rgb(255, 255, 255) !important; }
