--- a/src/scripts/css/cet/cet.qstprod.css
+++ b/src/scripts/css/cet/cet.qstprod.css
@@ -1,4 +1,5 @@
 div.row { margin-left: 0px !important; margin-right: 0px !important; }
+.btn-info { margin-top: 4px !important; }
 .cet-formgroup-container { background-color: rgb(250, 250, 250); border: 1px solid lightgrey; border-radius: 4px; padding: 16px; margin-bottom: 20px; }
 .cet-accordion { background-color: rgb(250, 250, 250); border: 1px solid lightgrey; border-radius: 4px; margin-bottom: 20px; }
 .cet-formgroup-inner-container { background-color: rgb(255, 255, 255) !important; }
@@ -7,6 +8,7 @@ label.cet-formgroup-container-label { color: rgb(30, 40, 30); font-size: 18px; }
 button.cet-recherche-produit-element-btn { margin-left: 2px; }
 .cet-qstprod-label-text { color: rgb(70, 80, 40); }
 .cet-input-label { margin-left: 8px; }
+.cet-idcetwww-char { margin-bottom: 4px; font-size: 26px; font-weight: normal; padding: 6px; }
 .cet-qstprod-btnnav { margin-top: 20px; }
 .cet-accordion-icon { color: #5cb85c; float: right; font-size:28px; margin-left: 12px; }
 .cet-accordion-icon:hover { color: #28a745; }
