--- a/src/scripts/css/cet/cet.qstprod.css
+++ b/src/scripts/css/cet/cet.qstprod.css
@@ -7,6 +7,8 @@
   background-color: #CAE3EE !important; color: #6C3012 !important; 
   font-family: 'Signika', sans-serif;
 } 
+.navbar a.cet-navbar-btn { font-family: 'Courgette', cursive; color: white !important; font-size: 18px; }
+.navbar a.cet-navbar-btn-small { font-family: 'Courgette', cursive; color: white !important; font-size: 16px; margin-right: 6px; }
 .cet-footer a.cet-p, small.cet-email-tag { font-family: 'Courgette', cursive; color: #DD4215 !important; }
 /** END style Fanny ********************/
 /***************************************/
