--- a/src/scripts/css/cet/cet.qstprod.css
+++ b/src/scripts/css/cet/cet.qstprod.css
@@ -13,9 +13,10 @@
 .cet-footer a.cet-p, small.cet-email-tag { font-family: 'Courgette', cursive; color: #DD4215 !important; }
 /** END style Fanny ********************/
 /***************************************/
-#mapid { height: 180px; }
 /*********************************/
 /** CSS toutes pages. ************/
+.cet-carte-info a, p { font-family: 'Signika', sans-serif; }
+.cet-carte-info .card-header { font-family: 'Courgette', cursive; font-weight: bold; }
 div.row { margin-left: 0px !important; margin-right: 0px !important; }
 .btn-info { margin-top: 4px !important; }
 .cet-formgroup-container { background-color: rgb(250, 250, 250); border: 1px solid lightgrey; border-radius: 4px; padding: 16px; margin-bottom: 20px; }
